--- a/view/css/styleDef.css
+++ b/view/css/styleDef.css
@@ -1,14 +1,65 @@
-body {
+/*  -=-=-=-=-=-=---> Additions <---=-=-=-=-=-=-  */
+        /* Cairo */
+        @import url('https://fonts.googleapis.com/css?family=Cairo');
+        /* El Messiri */
+        @import url('https://fonts.googleapis.com/css?family=Cairo|El+Messiri');
+        /* Changa */
+        @import url('https://fonts.googleapis.com/css?family=Changa');
+        /* Amiri */
+        @import url('https://fonts.googleapis.com/css?family=Amiri');
+
+
+/*  -=-=-=-=-=-=---> Style All Page Default <---=-=-=-=-=-=-  */
+
+    a.rem{text-decoration: none;}
+
+
+
+/*  -=-=-=-=-=-=---> Style Front Page <---=-=-=-=-=-=-  */
+    
+body{
     direction: rtl;
-    margin: 0px;
-    height: 2000px;
-}
-header{
-
-    width: 100%;
-    height: 900px;
-    background-image: url(../img/wallpaper/nature.jpg), url(../img/wallpaper/sunset1.jpg), url(../img/wallpaper/sunset2.jpg), url(../img/wallpaper/tree.jpg), url(../img/wallpaper/waters.jpg);
-    background-position: center bottom, left top;
-    background-repeat: no-repeat;
+    margin: 0px; padding: 0px;
+    background-color: rgb(223, 223, 223);
 
 }
+    /*********** HEADER ***********/
+    header{
+        background-image: linear-gradient(rgba(32, 32, 32, 0.445),rgba(32, 32, 32, 0.616)),url(../img/wallpaper/waters.jpg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        height: 850px;
+        background-position: center center;
+
+    }
+        nav{
+            padding: 15px 10px;
+            cursor: pointer;
+        }
+            span.LSiteButton{
+                height: 110%;
+                font-family:'Changa';
+                font-size: 17px;
+                color: rgb(255, 255, 255);
+                text-shadow: -1px 1px 3px black; 
+                transition: all 0.5s;
+                -webkit-transition-duration: 0.4s; /* Safari */
+                transition-duration: 0.4s;
+
+            }
+            span.LSiteButton:hover{
+                color: bisque;
+
+            }
+            span.LSiteButton:active{
+                color: rgb(223, 86, 86)
+            }
+            span[class="|"]{
+                height: 110%;
+                font-family:'Changa';
+                font-size: 20px;
+                color: rgb(255, 255, 255);                
+                font: bold;
+
+            }
+
