--- a/view/css/styleDef.css
+++ b/view/css/styleDef.css
@@ -12,6 +12,19 @@
 /*  -=-=-=-=-=-=---> Style All Page Default <---=-=-=-=-=-=-  */
 
     a.rem{text-decoration: none;}
+    img.logoSite{
+        margin: 5px;
+        height: 150px;
+        width: 150px;
+        transition: all 0.5s;
+        -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.4s;
+    }
+    img.logoSite:hover{
+    filter: blur(5px);
+    /*border: 4px rgba(15, 15, 15, 0.514);*/
+
+    }
 
 
 
@@ -21,11 +34,12 @@ body{
     direction: rtl;
     margin: 0px; padding: 0px;
     background-color: rgb(223, 223, 223);
+    /*height: 2500px;*/
 
 }
     /*********** HEADER ***********/
     header{
-        background-image: linear-gradient(rgba(32, 32, 32, 0.445),rgba(32, 32, 32, 0.616)),url(../img/wallpaper/waters.jpg);
+        background-image: linear-gradient(rgba(5, 5, 5, 0.767),rgba(0, 0, 0, 0.13),rgba(5, 5, 5, 0.767)),url(../img/wallpaper/waters.jpg);
         background-size: 100%;
         background-repeat: no-repeat;
         height: 850px;
@@ -48,7 +62,7 @@ body{
 
             }
             span.LSiteButton:hover{
-                color: bisque;
+                color: rgb(241, 197, 100);
 
             }
             span.LSiteButton:active{
@@ -63,3 +77,17 @@ body{
 
             }
 
+
+            section{
+                height: 1250px;
+
+            }
+
+
+
+            footer{
+
+                height: 300px;
+                background-color: rgba(15, 15, 15, 0.856);
+
+            }
