--- a/view/css/styleDef.css
+++ b/view/css/styleDef.css
@@ -36,12 +36,12 @@ body{
         img.logoSite{
             height: 150px;
             width: 150px;
-            transition: all 0.5s;
-            -webkit-transition-duration: 0.4s; /* Safari */
-            transition-duration: 0.4s;
+            transition-duration: 0.3s;
+        
         }
         img.logoSite:hover{
-            filter: blur(5px);
+            filter: blur(2px);
+ 
 
         }    
 
@@ -84,11 +84,14 @@ body{
             div#git img{
                 height: 50px;
                 width: 50px;
-                padding: 5px
+                padding: 5px;
+                transition: all 0.3s;
+
             }
             div#git img:hover{
                 background-color: rgb(224, 224, 224);
                 border-radius: 50%;
+                
             }
 
         nav{
@@ -101,17 +104,18 @@ body{
                 font-size: 17px;
                 color: rgb(255, 255, 255);
                 text-shadow: -1px 1px 3px black; 
-                transition: all 0.5s;
-                -webkit-transition-duration: 0.4s; /* Safari */
-                transition-duration: 0.4s;
-
+                transition: all 0.4s;
+                
+    
             }
             span.LSiteButton:hover{
-                color: rgb(241, 197, 100);
+                color: rgba(253, 185, 108, 0.986);
+                border-bottom: 2px;
+                border-bottom-color: rgba(253, 185, 108, 0.986) ;
 
             }
             span.LSiteButton:active{
-                color: rgb(223, 86, 86)
+                color: rgb(223, 86, 86);
             }
             span[class="|"]{
                 height: 110%;
