--- a/view/css/styleDef.css
+++ b/view/css/styleDef.css
@@ -10,7 +10,10 @@
 
 
 /*  -=-=-=-=-=-=---> Style All Page Default <---=-=-=-=-=-=-  */
+    *{
+        font-family: 'Changa';
 
+    }
     a.rem{text-decoration: none;}
 
 
@@ -36,19 +39,31 @@ body{
         img.logoSite{
             height: 150px;
             width: 150px;
+            border-radius:50%; 
+            box-shadow: 0px 0px 4px 8px rgba(4, 0, 24, 0.877) inset;
             transition-duration: 0.3s;
         
         }
         img.logoSite:hover{
-            filter: blur(2px);
- 
+            filter: blur(3px);
 
         }    
 
         div.titleSite{
             padding: 15px;
 
+        } 
+        /*
+        * For next time *
+        div#imgtitle{
+            transition: all 0.3s;
+        }div#imgtitle:hover{ 
+            filter: blur(3px); 
         }
+        */
+        
+
+
         div.titleSite div{
             display: inline-block;
             
