--- a/View/css/styleSection.css
+++ b/View/css/styleSection.css
@@ -18,6 +18,7 @@
     }
     label{color: azure}
     a.rem{text-decoration: none; color: azure}
+    a.remp{text-decoration: none; color: rgb(7, 7, 7);}
     input[type="submit"], input[type="file"]{
         height: 30px;
         width: 100px;
@@ -34,6 +35,9 @@
         transition: all 0.3s;
     } select:hover{
         background-color: aquamarine;
+    }
+    span.title{
+        font-size: 25pt
     }
     span.titleSign{
         position: relative;
@@ -163,7 +167,7 @@
             color: rgb(80, 80, 80);
         }
 /*-=-=-=-=-=- SECTION -=-=-=-=-=-*/
-    /* Join Us */
+  /* Join Us */
     section#joinus{
         min-height: 700px;
         max-height: 1000px;
@@ -205,6 +209,48 @@
                 position: relative;
                 right: 40%;
                 top: 40px;
+            }
+  /* Our Project */
+    section#ourprojects{
+        height: 800px;
+        margin: 0px;
+        background-color: #e4e4e4;
+        padding-top: 10px;
+        padding-bottom: 10px; 
+    }
+        section#ourprojects article.projectimg{
+            height: 250px;
+            
+
+        }
+            section#ourprojects article.projectimg section.project{
+                height: 200px;
+                width: 30%;
+                display: inline-block;
+                background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)) ,url(../img/wallpaper/waters.jpg);
+                background-position: center center;
+                background-repeat: no-repeat;
+                background-size: 100%;
+                box-shadow: 0px 0px 5px 1px rgba(34, 34, 34, 0.596);
+                padding: 8px;
+                margin: 10px;
+                transition: linear all 0.2s ;
+                cursor: pointer;
+                
+            }
+            section#ourprojects article.projectimg section.project:hover{
+                box-shadow: 0px 0px 2px 5px rgba(34, 34, 34, 0.596);
+                background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)) ,url(../img/wallpaper/waters.jpg);
+                color: azure;
+            }
+            section.project span.projectText{
+                font-size: 20pt;
+                position: relative;
+                top: 5px;
+                display: block
+            } 
+            section.project span.projectDescrib{
+                font-size: 12pt;
             }
 /*-=-=-=-=-=- FOOTER -=-=-=-=-=-*/
     footer{
