--- a/View/css/styleSection.css
+++ b/View/css/styleSection.css
@@ -68,23 +68,18 @@
 
     }
     textarea{
-        border: none;
+        border: 2px paleturquoise dotted;
         background-color: rgb(63, 63, 63);
         color: rgb(255, 255, 255);
         text-align: right;
+        width: 518px; 
+        height: 280px;
+        padding-right: 15px;
+        padding-top:5px; 
+        font-size: 12pt;
+        
+    }
 
-    }
-    .rtl {
-        direction: rtl; 
-        text-align: right;
-        unicode-bidi: bidi-override;
-    }
-    
-    .ltr {
-        direction: ltr; 
-        text-align: left;
-        unicode-bidi: bidi-override;
-    }
 /*-=-=-=-=-=- HEADER -=-=-=-=-=-*/
     header{
         width: 100%;
@@ -299,7 +294,6 @@
                 color: #d6b627;
                 display: block
             } section.project span.projectText:hover{
-                color: azure;
                 
             } 
             section.project span.projectDescrib{
